# mapsy

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci.yml
dev/: cubefile_descriptors.ipynb
docs/: develop-instructions.md  release-notes.md
docs/notebooks/: acsf.ipynb  boundary.ipynb  bpsf.ipynb  contactspace.ipynb  cube.ipynb  functions.ipynb  grid.ipynb
docs/notebooks/data-files/: MoS2_defect.xyz
docs/notebooks/input-files/: acsf.yaml  bpsf.yaml  cube.yaml
examples/Perovskites/: La.5Sr.5CoO3.xyz  planar_maps_ideal.ipynb
examples/Pt/: ionic_maps_cluster.ipynb  ionic_maps_ideal.ipynb  planar_maps_hyperparameters.ipynb  planar_maps_ideal.ipynb  planar_maps_vacancy.ipynb  system_maps_ideal.ipynb
examples/vizzy/: GoVizzy.ipynb  PT111.ipynb  ipyvolume.ipynb
src/mapsy/: __init__.py  __main__.py  clustering.py  maps.py  metrics.py  multimaps.py  results.py  selection.py  workflows.py
src/mapsy/analysis/: __init__.py  archetypes.py  clustering.py  decomposition.py  graphs.py
src/mapsy/boundaries/: __init__.py  boundary.py  contactspace.py  ionic.py  system.py
src/mapsy/calculations/: __init__.py  cluster.py  qe.py
src/mapsy/cli/: main.py
src/mapsy/data/: __init__.py  gradient.py  grid.py  hessian.py  scalar.py  system.py  volumetric.py
src/mapsy/io/: __init__.py  base.py  cube.py  parser.py  xyz.py
src/mapsy/io/input/: base.py  input.py  keytypes.py
src/mapsy/learning/: __init__.py  adaptive.py  datasets.py  models.py
src/mapsy/plotting/: __init__.py  clustering.py  parity.py  pca.py
src/mapsy/symfunc/: __init__.py  input.py  parser.py  symmetryfunction.py
src/mapsy/symfunc/atomic/: __init__.py  acsf.py  bpsf.py  cubesf.py
src/mapsy/utils/: __init__.py  cutoff.py  iotypes.py  multiproc.py  scalars.py  vdwradii.py
src/mapsy/utils/functions/: __init__.py  container.py  erfc.py  functions.py
tests/: test_archetypes.py  test_cluster_propagation.py  test_contactspace_annotations.py  test_graphs.py  test_imports.py  test_learning.py  test_metrics.py  test_multimaps.py  test_plotting.py  test_qe_parser.py  test_qe_setup.py  test_selection.py  test_workflows.py
