[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mapsy"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Oliviero Andreussi", email = "olivieroandreuss@boisestate.edu" }]
maintainers = [{ name = "Oliviero Andreussi", email = "olivieroandreuss@boisestate.edu" }]
keywords = [
    "materials",
    "chemistry",
    "quantum",
    "embedding",
    "adsorption",
    "catalysis"
]
classifiers = ["Operating System :: OS Independent", "Private :: Do Not Upload"]
dynamic = ["version", "description"]
dependencies = [
    "PyYAML ~= 6.0",
    "pydantic ~= 1.9",
    "scipy ~= 1.8",
    "multimethod ~= 1.9",
    "click >= 7.1"
]

[project.optional-dependencies]
tester = ["pytest ~= 7.0"]
linter = ["flake9 ~= 3.0"]
mypy = ["mypy ~= 0.9", "types-PyYAML ~= 6.0"]
formatter = ["black ~= 24.4", "toml ~= 0.10"]
doc = ["sphinx"]

[project.urls]
Source = "https://github.com/BoiseState-MATERIALab/surface-topology"

[project.scripts]
mapsy-cli = "mapsy.cli:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rN -v --tb=short"
testpaths = "tests"
markers = ["datadir: change directory to data location"]

[tool.mypy]
mypy_path = "stubs"
strict_optional = false
ignore_missing_imports = true
disable_error_code = "no-redef"

[tool.flake8]
ignore = "E123,E125,E126,E127,E133,E501,E701,F401,F811"
hang-closing = true
