[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mapsy"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Oliviero Andreussi", email = "olivieroandreuss@boisestate.edu" }]
maintainers = [{ name = "Oliviero Andreussi", email = "olivieroandreuss@boisestate.edu" }]
keywords = [
    "materials",
    "chemistry",
    "quantum",
    "embedding",
    "adsorption",
    "catalysis"
]
classifiers = ["Operating System :: OS Independent", "Private :: Do Not Upload"]
dynamic = ["version", "description"]
dependencies = [
    "PyYAML ~= 6.0",
    "pydantic ~= 1.9",
    "scipy ~= 1.8",
    "multimethod ~= 1.9",
    "click >= 7.1",
    "numpy",
    "pandas",
    "pathos",
    "scikit-learn",
    "ase"   
]

[project.optional-dependencies]
tester = ["pytest ~= 7.0"]
linter = ["ruff == 0.14.1", "pre-commit == 4.3.0"]
formatter = ["black == 24.10.0"]
mypy = ["mypy == 1.18.2", "types-PyYAML ~= 6.0"]
doc = ["sphinx ~= 7.0", "myst-parser ~= 3.0"]
examples = ["networkx",
     "seaborn"
     ]

[project.urls]
Source = "https://github.com/BoiseState-MATERIALab/mapsy"

[project.scripts]
mapsy = "mapsy.cli.main:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rN -v --tb=short"
testpaths = "tests"
markers = ["datadir: change directory to data location"]

[tool.mypy]
mypy_path = "stubs"
strict_optional = false
ignore_missing_imports = true
disable_error_code = "no-redef"

[tool.flit.sdist]
include = ["docs/**", "examples/**"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
